--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,9 @@ p {
     padding: 0px 8px;
     text-indent: -8px;
 }
+
+@media screen and (max-width: 476px) {
+    .label {
+      width: 80vw;
+    }
+}
